Fix news descriptions content and overflow

--- a/src/scss/Applet.module.scss
+++ b/src/scss/Applet.module.scss
@@ -45,6 +45,7 @@
     font-size: 1rem;
     text-align: left;
     max-width: 60rem;
+    overflow: hidden;
   }
 }
 
